syntax = "proto3";
package cooperations;

import "company.proto";

service CooperationService {
  rpc getById(Id) returns (GetOneResponse) {}
  rpc getList(QueryCooperation) returns (GetListResponse) {}
  rpc create(Cooperation) returns (GetOneResponse) {}
  rpc update(Cooperation) returns (GetOneResponse) {}
  rpc delete(Id) returns (DeleteResponse) {}
}

message Cooperation {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional int32 cooperationId = 7;
  optional string description = 8;
  optional string date = 9;
  optional Company cooperation = 10;
  optional bool isCustomer = 11;
}

message QueryCooperation {
  optional int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string createdBy = 4;
  optional string updatedBy = 5;
  optional string state = 6;
  optional int32 page = 7;
  optional int32 limit = 8;
  optional string sortBy = 9;
  optional string sortOrder = 10;
  optional int32 cooperationId = 11;
  optional string description = 12;
  optional string date = 13;
  optional Company cooperation = 14;
  optional bool isCustomer = 15;
}

message GetListResponse {
  string message = 1;
  optional int32 totalItems = 2;
  optional int32 perPage = 3;
  optional int32 totalPages = 4;
  optional int32 page = 5;
  repeated Cooperation data = 6;
}

message GetOneResponse {
  string message = 1;
  optional Cooperation data = 2;
}
